--- a/LotusProject/Views/Shared/_Layout.cshtml
+++ b/LotusProject/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@ ClassLibraryModels.ViewModels.Cep cep = ViewBag.Cep;
         $('.ui.dropdown')
             .dropdown()
             ;
+
     </script>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -269,7 +270,7 @@ ClassLibraryModels.ViewModels.Cep cep = ViewBag.Cep;
     <!--Modal Final-->
 
 
-    <div>
+    <div style="background-color: #2A435B">
 
         @RenderBody()
 
