--- a/LotusProject/static/css/styleLayoutAdm.css
+++ b/LotusProject/static/css/styleLayoutAdm.css
@@ -1,4 +1,4 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&display=swap');
+﻿@import url('https://fonts.googleapis.com/css2?family=Yaldevi:wght@200&display=swap');
 
 :root {
     --secundary-color: #2A435B;
@@ -7,29 +7,49 @@
     --nav-color: #233240;
     --red-color: #540b0e;
 }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-body {
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
     min-height: 100vh;
+    overflow-x: hidden;
     background-color: var(--secundary-color)
 }
 
+.content-main{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.container {
+    position: relative;
+    width: 100%;
+}
+
+
 .navigation {
     position: fixed;
-    top: 20px;
-    left: 2px;
-    bottom: 20px;
     background-color: var(--nav-color);
-    width: 70px;
-    box-sizing: initial;
+    width: 230px;
+    height: 100%;
     border-radius: 10px;
     border-left: 5px solid var(--nav-color);
-    transition: width 0.5s;
-    overflow-x: hidden;
-    z-index: 10;
+    transition: 0.5s;
+    overflow: hidden;
 }
-    .navigation.active{
-        width:220px
+
+    .navigation.active {
+        width: 75px;
     }
+
 
     .navigation ul {
         position: absolute;
@@ -44,115 +64,143 @@ body {
             position: relative;
             list-style: none;
             width: 100%;
-            border-top-left-radius: 20px;
-            border-bottom-left-radius: 20px;
+            border-top-left-radius: 30px;
+            border-bottom-left-radius: 30px;
         }
 
-            .navigation ul li.active {
-                background-color: var(--secundary-color);
-            }
-             .navigation ul li b:nth-child(1){
-                 position:absolute;
-                 top:-20px;
-                 height:20px;
-                 width:100%;
-                 background-color: var(--secundary-color);
-                 display:none;
+        .navigation ul li:hover,
+        .navigation ul li.hovered {
+            background-color: var(--secundary-color)
+        }
 
+            .navigation ul li:nth-child(1){
+                 margin-bottom: 40px;
+                 pointer-events: none;
              }
-                .navigation ul li b:nth-child(1)::before {
-                content:'';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width:100%;
-                height:100%;
-                border-bottom-right-radius: 20px;
-                background-color: var(--nav-color);
-                }
 
-            .navigation ul li.active b:nth-child(1), 
-            .navigation ul li.active b:nth-child(2) {
-            display: block;
-            }
-
-
-
-            .navigation ul li b:nth-child(2) {
-                position: absolute;
-                bottom: -20px;
-                height: 20px;
+            .navigation ul li a{
+                position: relative;
+                display: block;
                 width: 100%;
-                background-color: var(--secundary-color);
-                display: none;
+                display: flex;
+                text-decoration: none;
+                color: var(--primary-color)
             }
-                .navigation ul li b:nth-child(2)::before {
-                content:'';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width:100%;
-                height:100%;
-                border-top-right-radius: 20px;
-                background-color: var(--nav-color);
-                }
 
-                .navigation ul li a {
+            .navigation ul li:hover a,
+            .navigation ul li.hovered a {
+                color: var(--tertiary-color)
+            }
+
+                .navigation ul li a .icon{
                     position: relative;
                     display: block;
-                    width: 100%;
-                    display: flex;
-                    text-decoration: none;
-                    color: var(--primary-color);
+                    min-width: 60px;
+                    height: 60px;
+                    line-height: 70px;
+                    text-align: center;
                 }
 
-                    .navigation ul li a .icon {
-                        position: relative;
-                        display: block;
-                        min-width: 60px;
-                        height: 60px;
-                        line-height: 70px;
-                        text-align: center;
+            .navigation ul li a .image {
+                position: relative;
+                display: block;
+                min-width: 60px;
+                height: 60px;
+                line-height: 60px;
+                text-align: center;
+            }
+
+                    .navigation ul li a .icon ion-icon{
+                        font-size: 1.75em;
                     }
 
-                        .navigation ul li a .icon ion-icon {
-                            font-size: 1.5em;
+                        .navigation ul li a .title{
+                            position: relative;
+                            display: block;
+                            padding: 0 10px;
+                            height: 60px;
+                            line-height: 60px;
+                            text-align: start;
+                            white-space: nowrap
                         }
-
-                    .navigation ul li a .title {
-                        position: relative;
-                        display: block;
-                        padding-left: 10px;
-                        height: 60px;
-                        line-height: 60px;
-                        white-space: normal;
-                    }
-
-.toggle {
-    position: fixed;
-    top: 23px;
-    left: 24px;
-    width: 35px;
-    height: 35px;
-    background-color: var(--nav-color);
-    border-radius: 10px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
-}
-
-    .toggle.active{
-        background-color: var(--primary-color);
+    .navigation ul li:hover a::before,
+    .navigation ul li.hovered a::before{
+        content:'';
+        position: absolute;
+        top: -50px;
+        right: 0;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background: transparent;
+        pointer-events: none;
+        box-shadow:35px 35px 0 10px var(--secundary-color);
     }
-.toggle ion-icon{
+
+            .navigation ul li:hover a::after,
+            .navigation ul li.hovered a::after {
+                content: '';
+                position: absolute;
+                bottom: -50px;
+                right: 0;
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                background: transparent;
+                pointer-events: none;
+                box-shadow: 35px -35px 0 10px var(--secundary-color);
+            }
+
+
+.main {
     position: absolute;
-    color: var(--secundary-color);
-    font-size: 24px;
+    width: calc(100% - 230px);
+    left: 230px;
+    min-height: 100vh;
+    transition: 0.5s;
 }
+
+                .main.active {
+                    width: calc(100% - 75px);
+                    left: 75px;
+                }
+
+            .topbar{
+                width:100%;
+                height: 60px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0 10px;
+            }
+            .toggle{
+                position:fixed;
+                padding-left: 15px;
+                top: 10px;
+                width: 30px;
+                height: 30px;
+                align-items: center;
+                justify-content: center;
+                font-size: 2.5em;
+                cursor: pointer;
+                color: white
+            }
+.title-page {
+    color: white;
+    font-size: 1.5em;
+    font-family: 'Red Hat Mono', monospace;
+}
+
+.user-account {
+    color: white;
+    font-size: 1.5em;
+    font-family: 'Red Hat Mono', monospace;
+}
+
+
+
 ::-webkit-scrollbar {
-        width: 0px;
+    width: 0px;
 }
 
 
@@ -170,35 +218,7 @@ body {
         background: #555;
     }
 
-.content-main{
-    padding-left:86px;
-    padding-right: 10px;
-    padding-top: 20px;
-}
-
-.card{
-    background-color: var(--nav-color);
-    height: 150px;
-    border-radius: 9px
-
-}
-
-    .card h5 {
-        font-family: 'Nunito', sans-serif;
-        text-decoration: solid;
-        color: var(--tertiary-color);
-    }
-    .card p {
-        font-family: 'Nunito', sans-serif;
-        color: var(--tertiary-color);
-    }
-
-.img-welcome {
-    width: 130px;
-    height: 130px;
-}
 
 
-.card-reservations{
 
-}
+
