--- a/LotusProject/Views/Reservation/Reservation.cshtml
+++ b/LotusProject/Views/Reservation/Reservation.cshtml
@@ -3,34 +3,269 @@
     ViewBag.Title = "Reservation";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<head>
 
-</head>
-<div class="container" >
+<link rel="stylesheet" href="~/static/css/StyleReservation.css">
+<div class="container">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="max-height: 600px; padding-top: 70px;">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="~/static/Images/Lotus SPA.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="~/static/Images/Lotus SPA.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="~/static/Images/Lotus SPA.png" class="d-block w-100" alt="...">
+            </div>
+           
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
-    <div class="row" style="padding-top:55px">
-        <div class="col-md-4" style="max-width: 400px">
-            <div class="card border-light mb-2">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="~/static/Images/Edward Ramon.png" class="img-fluid rounded-start" alt="...">
+    <div class="row">
+
+        <div class="col-md-3">
+
+            <div class="ui cards ">
+                <div class="card main-cards">
+                    <div class="image">
+                        <img src="~/static/Images/ImageKnowUs.png">
                     </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <div>
-                            <button class="ui inverted violet button">Violet</button>
-                            </div>
-
+                    <div class="content">
+                        <div class="header">Nome do pacote</div>
+                        <div class="meta">
+                            <a>Duração do pacote</a>
                         </div>
+                        <div class="description">
+                            Esta é a descrição do pacote
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <span class="right floated price">
+                            R$100,00
+                        </span>
+                        <button class="ui inverted violet button">Comprar</button>
                     </div>
                 </div>
             </div>
+
         </div>
 
-        
+        <div class="col-md-3">
+
+            <div class="ui cards ">
+                <div class="card main-cards">
+                    <div class="image">
+                        <img src="~/static/Images/ImageKnowUs.png">
+                    </div>
+                    <div class="content">
+                        <div class="header">Nome do pacote</div>
+                        <div class="meta">
+                            <a>Duração do pacote</a>
+                        </div>
+                        <div class="description">
+                            Esta é a descrição do pacote
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <span class="right floated price">
+                            R$100,00
+                        </span>
+                        <button class="ui inverted violet button">Comprar</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="ui cards ">
+                <div class="card main-cards">
+                    <div class="image">
+                        <img src="~/static/Images/ImageKnowUs.png">
+                    </div>
+                    <div class="content">
+                        <div class="header">Nome do pacote</div>
+                        <div class="meta">
+                            <a>Duração do pacote</a>
+                        </div>
+                        <div class="description">
+                            Esta é a descrição do pacote
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <span class="right floated price">
+                            R$100,00
+                        </span>
+                        <button class="ui inverted violet button">Comprar</button>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="ui cards ">
+                <div class="card main-cards">
+                    <div class="image">
+                        <img src="~/static/Images/ImageKnowUs.png">
+                    </div>
+                    <div class="content">
+                        <div class="header">Nome do pacote</div>
+                        <div class="meta">
+                            <a>Duração do pacote</a>
+                        </div>
+                        <div class="description">
+                            Esta é a descrição do pacote
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <span class="right floated price">
+                            R$100,00
+                        </span>
+                        <button class="ui inverted violet button">Comprar</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+        <hr />
+
+
+
+
+        <div class="col-md-3">
+
+            <div class="ui cards ">
+                <div class="card main-cards">
+                    <div class="image">
+                        <img src="~/static/Images/ImageKnowUs.png">
+                    </div>
+                    <div class="content">
+                        <div class="header">Nome do pacote</div>
+                        <div class="meta">
+                            <a>Duração do pacote</a>
+                        </div>
+                        <div class="description">
+                            Esta é a descrição do pacote
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <span class="right floated price">
+                            R$100,00
+                        </span>
+                        <button class="ui inverted violet button">Comprar</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="ui cards ">
+                <div class="card main-cards">
+                    <div class="image">
+                        <img src="~/static/Images/ImageKnowUs.png">
+                    </div>
+                    <div class="content">
+                        <div class="header">Nome do pacote</div>
+                        <div class="meta">
+                            <a>Duração do pacote</a>
+                        </div>
+                        <div class="description">
+                            Esta é a descrição do pacote
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <span class="right floated price">
+                            R$100,00
+                        </span>
+                        <button class="ui inverted violet button">Comprar</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="ui cards ">
+                <div class="card main-cards">
+                    <div class="image">
+                        <img src="~/static/Images/ImageKnowUs.png">
+                    </div>
+                    <div class="content">
+                        <div class="header">Nome do pacote</div>
+                        <div class="meta">
+                            <a>Duração do pacote</a>
+                        </div>
+                        <div class="description">
+                            Esta é a descrição do pacote
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <span class="right floated price">
+                            R$100,00
+                        </span>
+                        <button class="ui inverted violet button">Comprar</button>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="ui cards ">
+                <div class="card main-cards">
+                    <div class="image">
+                        <img src="~/static/Images/ImageKnowUs.png">
+                    </div>
+                    <div class="content">
+                        <div class="header">Nome do pacote</div>
+                        <div class="meta">
+                            <a>Duração do pacote</a>
+                        </div>
+                        <div class="description">
+                            Esta é a descrição do pacote
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <span class="right floated price">
+                            R$100,00
+                        </span>
+                        <button class="ui inverted violet button">Comprar</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
     </div>
+
+
+
 
 
 </div>
