--- a/LotusProject/static/css/StyleReservation.css
+++ b/LotusProject/static/css/StyleReservation.css
@@ -6,4 +6,28 @@
     --red-color: #540b0e;
 }
 
+.cards {
+   padding-top: 70px;
+   padding-bottom: 70px;
+   justify-content: center;
+}
 
+.main-cards {
+    border-radius: 15px !important;
+    width: 250px !important;
+}
+
+.image img{
+    border-top-left-radius: 15px !important;
+    border-top-right-radius: 15px !important;
+    width: 50px;
+    height: 50px;
+}
+
+.price {
+    height: 36px;
+    font-size: 15px;
+    padding-top: 7px;
+    padding-right: 10px;
+    color: var(--secundary-color);
+}
