--- a/LotusProject/static/css/styleLayout.css
+++ b/LotusProject/static/css/styleLayout.css
@@ -62,11 +62,7 @@
     border-color: var(--primary-color)
 }
 
-.photo-side {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 .header-custom.btn-close {
     margin-right: 1%
@@ -74,7 +70,7 @@
 
 .nav-link:hover {
     border-bottom-width: 3px;
-    color: var(--primary-color);
+    color: white !important;
     border-bottom-color: var(--primary-color);
 }
 
@@ -110,7 +106,10 @@ a.nav-link {
 
 }
 
-    
+.drop{
+    background-color: var(--secundary-color)
+}
+
 
 .drop:hover {
     color: var(--primary-color) !important;
