--- a/LotusProject/Views/Shared/_LayoutStore.cshtml
+++ b/LotusProject/Views/Shared/_LayoutStore.cshtml
@@ -6,8 +6,8 @@
 
     <!-- Semantic UI -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.js"></script>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.css" rel="stylesheet" />
     <script>
         $('.ui.dropdown')
             .dropdown()
@@ -49,7 +49,7 @@
                 </ul>*@
 
 
-            <form class="d-flex center-content">
+            <form class="center-content">
                 <div class="ui category search">
                     <div class="ui icon input">
                         <input class="prompt" type="text" placeholder="Procurar produtos...">
@@ -62,25 +62,22 @@
 
 
 
-            <div class="loc">
-                <button class="ui icon button nav-link buttoncarcolor loc">
+            <div class="heart">
+                <button class="ui icon button nav-link buttoncarcolor">
                     <i class="map marker alternate icon"></i>
                 </button>
             </div>
 
             <div class="heart">
-                <button class="ui icon button nav-link buttoncarcolor loc">
+                <button class="ui icon button nav-link buttoncarcolor">
                     <i class="heart icon"></i>
                 </button>
             </div>
 
-            <div class="center-content">
-                <div class="ui vertical animated button nav-link buttoncarcolor bord">
-                    <div class="visible content"><i class="shop icon"></i></div>
-                    <div class="hidden content">
-                        Carrinho
-                    </div>
-                </div>
+            <div class="heart">
+                <button class="ui icon button nav-link buttoncarcolor">
+                    <i class="shop icon"></i>
+                </button>
             </div>
 
             <div>
@@ -109,7 +106,7 @@
                     </li>
                 </ul>
             </div>
-
+        </div>
     </nav>
 
     <div class="ui inverted vertical menu navbar-lateral">
@@ -151,7 +148,7 @@
             Difusores
         </a>
     </div>
-    <div>
+    <div class="content-store">
         @RenderBody()
     </div>
 
@@ -219,7 +216,7 @@
         </div>
     </div>
 
-    
+
 
 </body>
 
