--- a/LotusProject/static/css/LayoutStore.css
+++ b/LotusProject/static/css/LayoutStore.css
@@ -21,6 +21,8 @@
     width: 70%
 }
 
+
+
 .esp {
     margin-left: 15px;
 }
@@ -67,29 +69,24 @@
 
 .center-content {
     border-radius: 5px;
-    margin-right: 15px;
-    margin-left: 15px;
+    margin-right: 20px;
+    margin-left: 50px;
     color: var(--primary-color) !important;
 }
 
 .buttoncarcolor {
     background-color: var(--secundary-color) !important;
-    width: 70px;
+    width: 40px;
     border-radius: 0 !important;
 }
 
-.loc {
-    width: 50px;
-    margin-left: 130px;
-}
-
 .heart {
-    width: 50px;
-    margin-left: 0px;
+    width: 30px;
+    margin-left: 10px;
 }
 
-.bord {
-    margin-left: 0px;
+.nav-link.bord {
+    margin-left: 50px
 }
 
 .ui.inverted.vertical.menu {
@@ -101,11 +98,6 @@
     border-top-color: rgba(176, 176, 176, 0.16);
 }
 
-/*.princ {
-    font-weight: bold;
-}*/
-
-
 a.nav-link {
     display: flex;
     justify-content: center;
@@ -113,10 +105,14 @@ a.nav-link {
 
 .ui.icon.input {
     width: 800px;
-    margin-left: 270px;
+    margin-left: 120px;
 }
 
-
+.content-store {
+    padding-left: 235px;
+    padding-top: 90px !important;
+    padding-bottom: 100px
+}
 
 .drop:hover {
     color: var(--primary-color) !important;
@@ -129,7 +125,7 @@ a.nav-link {
 
 .search {
     margin-right: 15px;
-    margin-left: 15px;
+    margin-left: 0px;
 }
 
 .body-content {
@@ -174,28 +170,30 @@ nav.navbar.navbar-expand-lg.navbar-light.fluid {
     text-decoration: none !important;
 }
 
-.footer ul {
-    text-align: start;
-    padding-inline-start: 0;
+    .footer ul {
+        text-align: start;
+        padding-inline-start: 0;
+    }
+
+        .footer ul li {
+            list-style: none;
+        }
+
+            .footer ul li a {
+                text-decoration: none;
+                color: white;
+            }
+
+                .footer ul li a:hover {
+                    color: var(--primary-color)
+                }
+
+.navbar-lateral {
+    position: fixed;
+    width: 200px !important;
+    height: 100%
 }
 
-.footer ul li {
-    list-style: none;
-}
-
-.footer ul li a {
-    text-decoration: none;
-    color: white;
-}
-
-.footer ul li a:hover {
-    color: var(--primary-color)
-}
-
-.navbar-lateral{
-    position: fixed
-}
-
-cont p{
+cont p {
     margin-left: 1000px;
 }
